css/main.css
html,
body {
    height: 100%;
    margin: 0;
    background-color: #F2F2F2;
    font-size: 16px;
    font-weight: 300;
    font-family: 'RobotoDraft', sans-serif;
    color: #444;
}

a,
a:link,
a:visited {
	font-size: inherit;
	text-decoration: none;
	color: #3367d6;
}

p {
	line-height: 23px;
}

h2 {
	font-size: 22px;
	padding-left: 2px;
	font-weight: 500;
}

tr.space-under > td
{
  	padding-bottom: 1em;
}

.icon {
	width: 24px;
	height: 24px;
}

.default app-layout /deep/ core-scaffold /deep/ core-drawer-panel core-header-panel core-toolbar {
    background-color: #FC6F64;
    color: #fff;
}

.index-page .general-info {
  -webkit-flex-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
}

.index-page .contact td {
	padding-right: 10px;
}

.index-page .contact tr {
	padding-bottom: 10px;
}

.index-page .icon {
	color: #656565;
}

.index-page .app-icon {
	width: 48px;
	height: 48px;
}

.index-page .app-title {
	margin-left: 15px;
}

.index-page .photo {
	margin: 0 0 0 auto;
	padding-right: 20px;
}

.index-page .contact .contact-title {
	color: #656565;
}

.index-page #ghcard-yyunikov-1 {
	margin-top: 20px;
}

.index-page #so-card-widget {
	margin: 0 20px;
}

.index-page .subsection-heading {
	margin-top: 20px;
	padding: 10px 15px;
	background-color: #f3f3f3;
	border-top-left-radius: 5px;
	border-top-right-radius: 5px;
	font-size: 18px;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	-webkit-tap-highlight-color: rgba(0,0,0,0);
}

.index-page .subsection-content {
	padding: 15px;
	border: 1px solid #dedede;
	border-top: none;
	border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px;
}

.index-page .subsection-content ul {
	padding-left: 25px;
	margin: 0;
}

.index-page .projects-label {
	margin-top: 20px;
}

.index-page .project-title {
	padding-top: 10px;
}

.index-page .project-subtitle {
	font-size: 12px;
	padding-top: 5px;
	color: #383838;
}

.index-page .project-description {
	font-size: 14px;
	padding-top: 10px;
	color: #353535;
}

.index-page .subsection-heading-subtitle1 {
	font-size: 14px;
	padding-top: 10px;
	color: #353535;
}

.index-page .subsection-heading-subtitle2 {
	font-size: 12px;
	padding-top: 10px;
	color: #6F6F6F;
}

.index-page .certificates-list li {
	padding: 5px 0;
}

@media screen and (max-width: 460px) {
	.index-page .general-info {
	  	display: block!important;
	}

	.index-page .general-info .photo img {
	  	margin: auto;
		display: block;
		padding: 10px;
	}
}

